kubernetes/applications/stirlingpdf/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stirlingpdf
  namespace: apps
spec:
  selector:
    matchLabels:
      app: stirlingpdf
  strategy:
    type: Recreate
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: stirlingpdf
    spec:
      containers:
        - name: stirlingpdf
          image: frooodle/s-pdf:1.1.0
          volumeMounts:
            - name: data
              mountPath: /usr/share/tessdata
              subPath: trainingdata
            - name: data
              mountPath: /configs
              subPath: config
          resources:
            limits:
              cpu: 50m
              memory: 500Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: stirlingpdf
