kubernetes/applications/stirlingpdf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: stirlingpdf
  namespace: apps
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: stirlingpdf
