kubernetes/applications/stirlingpdf/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: stirlingpdf-route
  namespace: apps
spec:
  parentRefs:
  - name: traefik-gateway
    kind: Gateway
    namespace: traefik
  hostnames:
    - "pdf.local.ildoc.it"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: stirlingpdf
          port: 8080
